# skills

./: .gitignore  README.md  mcp.json
extensions/code-search/: kodelet-extension-code-search
extensions/look-at/: kodelet-extension-look-at
extensions/nano-banana/: kodelet-extension-nano-banana
extensions/subagent/: kodelet-extension-subagent
google-workspace/: SKILL.md
icloud-cli/: SKILL.md
recipes/code/: architect.md  explorer.md  reviewer.md
recipes/ralph/: init.md  iterate.md
skills/ast-grep/: THIRD_PARTY_NOTICES.md
skills/cloudflare-tunnel/: SKILL.md
skills/custom-tool/: SKILL.md
skills/exa-search/: SKILL.md
skills/google-workspace/: SKILL.md
skills/icloud-cli/: SKILL.md
skills/librarian/: SKILL.md
skills/librarian/scripts/: ensure-repo.sh
skills/matchlock/: SKILL.md
skills/mermaid/: SKILL.md
skills/schedule/: SKILL.md  pyproject.toml
skills/schedule/scripts/: agentic-schedule  kodelet-schedule
skills/schedule/src/agentic_schedule/: api.py  cli.py  config.py  core.py  dispatcher.py  io.py  models.py  runner.py  service.py  store.py  timeparse.py
skills/schedule/src/kodelet_schedule/: cli.py  core.py
skills/schedule/tests/: conftest.py  test_api.py  test_cli.py  test_core.py  test_core_compat.py  test_dispatcher.py  test_models.py  test_runner.py  test_service.py
skills/strix-halo-llm/: SKILL.md
skills/tmux/: SKILL.md
skills/uv/: SKILL.md
skills/waitrose-cli/: SKILL.md
tools/: code_search  image_recognition  look_at  nano-banana  nano_banana  todo_read  todo_write
waitroise-cli/: SKILL.md
waitrose-cli/: SKILL.md
(+25 files in other folders)
