[project]
name = "kodelet-schedule"
version = "0.1.0"
description = "Skill-local scheduler for background Kodelet agentic tasks"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1,<9",
  "dateparser>=1.2,<2",
  "structlog>=24.1,<26",
]

[project.scripts]
kodelet-schedule = "kodelet_schedule.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.8,<1",
]
